# QT_Custom_Swtch_Widget

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/OnOffButton/: CMakeLists.txt  main.cpp
examples/SwicthButton/: CMakeLists.txt  main.cpp  switchwidget.ui
examples/ToggleBasic/: CMakeLists.txt  main.cpp
examples/ToggleOnOff/: CMakeLists.txt  main.cpp
examples/ToggleTrueFalse/: CMakeLists.txt  main.cpp
examples/ToggleYesNo/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/: qcswitchwidget.h
lib/src/: qcswitchwidget.cpp
